draft of version 2020.1 all content of 1.5 has been transferred - review needed

--- a/docs/01-fundamentals/01-duration-terms.adoc
+++ b/docs/01-fundamentals/01-duration-terms.adoc
@@ -2,17 +2,18 @@
 // tag::DE[]
 [width=50%]
 |===
-| Dauer: 55 Min. | Übungszeit: ca. 20 Min.
+| Dauer: 70 Min. | Übungszeit: ca. 20 Min.
 |===
 
 === Begriffe und Konzepte
 
+Softwarearchitektur, Dokumentation, Stakeholder, Notation, Vorgehensmodell, Lösungsentwurf, UML.
 
 // end::DE[]
 // tag::EN[]
 
 |===
-| Lesson duration: 55 min | Exercises: approx. 20 min
+| Lesson duration: 70 min | Exercises: approx. 20 min
 |===
 
 === Terms and concepts
