--- a/docs/00b-basics/02-curriculum-structure-and-chronological-breakdown.adoc
+++ b/docs/00b-basics/02-curriculum-structure-and-chronological-breakdown.adoc
@@ -5,83 +5,34 @@
 [cols="<,>", options="header"]
 |===
 | Inhalt | Empfohlene Mindestdauer (min)
-| 1. Thema mit Einleitung | 180
-| 2. Thema über xz | 150
-| 3. Thema mit viel Theorie | 120
-| 4. Thema mit xy und Beispiel | 180
-| 5. Thema mit abc und d | 210
-| 6. Thema mit Abschlussbeispiel | 120
+| 1. Grundbegriffe | 90
+| 2. Vorgehen bei Architekturdokumentation | 150
+| 3. Bestandteile von Architekturdokumetationen | 180
+| 4. Werkzeuge | 120
+| 5. Dokumentation bewerten | 120
+| 6. Beispiele für Dokumentation | 60
 | |
 | Summe | 960 (16h)
 
 |===
 
-[.text-center]
-.Zeitliche Aufteilung der Themengebiete
-image:01-basics/zeitaufteilung.png[pdfwidth=75%, role="text-center"]
+// 
+// Kuchendiagramm wegen Nutzlosigkeit ausgeblendet
+// (G.Starke, Nov. 2020)
+//
+//[.text-center]
+//.Zeitliche Aufteilung der Themengebiete
+//image:01-basics/zeitaufteilung.png[pdfwidth=75%, role="text-center"]
 
 // end::DE[]
 
 // tag::EN[]
 === Curriculum Structure and Recommended Durations
 
-[cols="4,1,1", options="header"]
-|===
 
-| Content
-| Lesson duration (minutes)
-| Exercises (minutes)
-
-
-| 1. Introduction and Motivation
-| 45
-| none
-
-| 2. Clean Start
-| 90
-| 90
-
-| 3. Handling Functional Requirements
-| 180
-| 120
-
-| 4. Handling Quality Requirements and Constraints
-| 120
-| 90
-
-| 5. Behavior-Driven Development
-| 60
-| none
-
-| 6.Prioritization and Estimation of Requirements
-| 45
-| 30
-
-| 7. Cooperation between Roles
-| 75
-| none
-
-| 8. Tools for Requirements Engineering
-| 60
-| none
-
-| 9. Example
-| 75
-| none
-
-| Sum
-| 750
-| 330
-
-| Total
-2+| 1080 min (18h)
-
-
-|===
-
-[.text-center]
-.Allocation of time for the topic areas
-image:01-basics/chronological_breakdown.png[pdfwidth=75%, role="text-center"]
+//[.text-center]
+//.Allocation of time for the topic areas
+//image:01-basics/chronological_breakdown.png[pdfwidth=75%, role="text-center"]
 // end::EN[]
 
 // tag::REMARK[]
