--- a/docs/03-elements/02-learning-goals.adoc
+++ b/docs/03-elements/02-learning-goals.adoc
@@ -4,17 +4,31 @@
 [[LZ-3-1]]
 ==== LZ 3-1: Einflusfaktoren und Randbedingungen dokumentieren 
 
+Softwarearchitekt:innen können Faktoren, die Einfluss auf Softwarearchitektur haben, identifizieren und geeignet dokumentieren, z. B.
+
+* Randbedingungen 
+* Qualitätsanforderungen und -ziele
+* Technische Risiken
+
 [[LZ-3-2]]
 ==== LZ 3-2: Architekturentscheidungen dokumentieren
+
+Softwarearchitekt:innen können
 
 [[LZ-3-3]]
 ==== LZ 3-3: Architektursichten dokumentieren
 
+Softwarearchitekt:innen können
+
 [[LZ-3-4]]
 ==== LZ 3-4: Übergreifende Konzepte dokumentieren
 
+Softwarearchitekt:innen können
+
 [[LZ-3-5]]
 ==== LZ 3-5: Konsistenz zwischen Teilen der Dokumentation sicherstellen
+
+Softwarearchitekt:innen können
 
 
 
