--- a/docs/00a-preamble/00-introduction.adoc
+++ b/docs/00a-preamble/00-introduction.adoc
@@ -1,22 +1,13 @@
 // tag::DE[]
-== Einführung: Allgemeine Informationen zum iSAQB Advanced Level
-
-include::01-what-to-expect-of-an-advanced-level-module.adoc[{include_configuration}]
-
-include::02-advanced-level-knowledge.adoc[{include_configuration}]
-
-<<<
-include::03-prerequisites.adoc[{include_configuration}]
+== Einführung: Allgemeines zum iSAQB Advanced Level
 // end::DE[]
 
 // tag::EN[]
 == Introduction: General information about the iSAQB Advanced Level
+// end::EN[]
 
 include::01-what-to-expect-of-an-advanced-level-module.adoc[{include_configuration}]
 
 include::02-advanced-level-knowledge.adoc[{include_configuration}]
 
-<<<
 include::03-prerequisites.adoc[{include_configuration}]
-// end::EN[]
-
