--- a/docs/00b-basics/01-what-to-expect-of-this-module.adoc
+++ b/docs/00b-basics/01-what-to-expect-of-this-module.adoc
@@ -1,7 +1,7 @@
 // tag::DE[]
 === Was vermittelt das Modul „{curriculum-short}“?
 
-ADOC vermittelt die Fähigkeiten:
+{curriculum-short} vermittelt die Fähigkeiten:
 
 * die Dokumentation von Softwarearchitekturen selbständig zu konzipieren und zu erstellen 
 * bestehende Dokumentation bezüglich ihrer Eignung und Angemessenheit zu bewerten 
