--- a/docs/06-examples/01-duration-terms.adoc
+++ b/docs/06-examples/01-duration-terms.adoc
@@ -7,7 +7,7 @@
 
 Innerhalb jeder akkreditierten Schulung muss mindestens ein Beispiel einer dokumentierten Softwarearchitektur vorgestellt werden.
 
-Art und Ausprägung der vorgestellten Beispiele können von der Schulung bzw. den Interessen der Teilnehmer abhängen und werden seitens iSAQB nicht vorgegeben.
+Art und Ausprägung der vorgestellten Beispiele können von der Schulung bzw. den Interessen der Teilnehmenden abhängen und werden seitens iSAQB nicht vorgegeben.
 
 // end::DE[]
 
