--- a/docs/00b-basics/04-prerequisites-for-this-training.adoc
+++ b/docs/00b-basics/04-prerequisites-for-this-training.adoc
@@ -2,7 +2,7 @@
 // tag::DE[]
 === Voraussetzungen
 
-Teilnehmer sollten folgende Kenntnisse und/oder Erfahrung mitbringen:
+Teilnehmende sollten folgende Kenntnisse und/oder Erfahrung mitbringen:
 
 * Grundlagen der Beschreibung von Architekturen mit Hilfe verschiedener Sichten, übergreifender Konzepte, Entwurfsentscheidungen, Randbedingungen etc., wie es im CPSA- F Foundation Level vermittelt wird.
 * Wünschenswert sind eigene Erfahrungen in der Erstellung und Pflege technischer Dokumentation von Software, insbesondere der Architektur von Software- oder Software- nahen Systemen.
