--- a/docs/02-approaches/02-learning-goals.adoc
+++ b/docs/02-approaches/02-learning-goals.adoc
@@ -17,10 +17,10 @@ Details zu den notwendigen methodischen Mitteln finden sich in den Lernzielen <<
 [[LZ-2-2]]
 ==== LZ 2-2: Zielgruppen und Ziele der Architekturdokumentation ermitteln
 
-Softwarearchitekt:innen können die Zielgruppen ("Stakeholder") für Architekturdokumentation ermitteln
+Softwarearchitekt:innen können die Zielgruppen („Stakeholder“) für Architekturdokumentation ermitteln
 (beispielsweise Management, Entwicklungsteam, fachliche Stakeholder, betriebliche Stakeholder, Test/QS).
 
-Sie können zusammen mit diesen Stakeholdern konkrete Ziele der Dokumentation ermitteln. 
+Sie können zusammen mit diesen Stakeholdern konkrete Ziele der Dokumentation ermitteln.
 
 
 [[LZ-2-3]]
@@ -28,26 +28,25 @@ Sie können zusammen mit diesen Stakeholdern konkrete Ziele der Dokumentation er
 
 Softwarearchitekt:innen können für gegebene Situationen und Systeme eine passende Struktur für die Architekturdokumentation auswählen oder erarbeiten.
 
-Als Basis dafür dienen Zielgruppen und Ziele (siehe <<LZ-2-2, LZ 2-2>>) sowie Templates (siehe <<LZ-2-5, LZ 2-5>>)).
+Als Basis dafür dienen Zielgruppen und Ziele (siehe <<LZ-2-2, LZ 2-2>>) sowie Templates (siehe <<LZ-2-5, LZ 2-5>>).
 
 [[LZ-2-4]]
 ==== LZ 2-4: Situativ passendes Vorgehen zur Architekturdokumentation bestimmen
 
-* Softwarearchitekt:innen finden für gegebene Situationen ein passendes Vorgehen zur Dokumentation.
+Softwarearchitekt:innen finden für gegebene Situationen ein passendes Vorgehen zur Dokumentation.
+Sie können Stakeholdern und dem Entwicklungsteam die Vor- und Nachteile verschiedener Ansätze erläutern, etwa:
 
-* Sie können Stakeholdern und dem Entwicklungsteam die Vor- und Nachteile verschiedener Ansätze erläutern, etwa:
+* Dokumentation entsteht **begleitend zur** Entwicklungsarbeit
+* Dokumentation entsteht **vor** der Entwicklung/Implementierung
+* Dokumentation entsteht **nach** der Entwicklung („Dokumentations-Sprint“)
+* Dokumentation wird durch Personen **aus dem Entwicklungsteam** erstellt und gepflegt
+* Dokumentation wird durch Personen **außerhalb des Entwicklungsteams** erstellt und gepflegt
 
-** Dokumentation entsteht **begleitend zur** Entwicklungsarbeit
-** Dokumentation entsteht **vor** der Entwicklung/Implementierung
-** Dokumentation entsteht **nach** der Entwicklung ("Dokumentations-Sprint")
-** Dokumentation wird durch Personen **aus dem Entwicklungsteam** erstellt und gepflegt
-** Dokumentation wird durch Personen **außerhalb des Entwicklungsteams** erstellt und gepflegt
-
-* Sie wissen, dass agile Entwicklung und Architekturdokumentation nicht im Widerspruch zueinander stehen, und können dies Stakeholdern gegenüber begründen.
+Sie wissen, dass agile Entwicklung und Architekturdokumentation nicht im Widerspruch zueinander stehen, und können dies Stakeholdern gegenüber begründen.
 
 
 [[LZ-2-5]]
-==== LZ 2-5: Beispiele standardisierter Dokumentationsstrukturen (_Templates_) kennen 
+==== LZ 2-5: Beispiele standardisierter Dokumentationsstrukturen (Templates) kennen
 
 Softwarearchitekt:innen kennen Beispiele von Architekturtemplates, etwa:
 
