Learning goals for chapter 1 translated to English

--- a/docs/01-fundamentals/01-duration-terms.adoc
+++ b/docs/01-fundamentals/01-duration-terms.adoc
@@ -18,6 +18,8 @@ Softwarearchitektur, Dokumentation, Stakeholder, Notation, Vorgehensmodell, Lös
 
 === Terms and concepts
 
+Software architecture, documentation, stakeholder, notation, process model, solution design, UML.
+
 // end::EN[]
 
 
