--- a/docs/01-fundamentals/02-learning-goals.adoc
+++ b/docs/01-fundamentals/02-learning-goals.adoc
@@ -84,8 +84,8 @@ Software architects understand that different stakeholders usually have differen
 * technical representation (with/without writing/editing options, PDF, HTML, Wiki, word processing, etc.)
 * Degree of timeliness (how _up-to-date_ does documentation needs to be, up-to-the latest development/release/test version? minor/major version?)
 
-[[LZ-1-3]]
-==== LZ 1-3: Differentiate architectural documentation from other types of documentation
+[[LG-1-3]]
+==== LG 1-3: Differentiate architectural documentation from other types of documentation
 
 Software architects understand that architecture documentation has points of contact and partial overlap with other types of documentation, for example:
 
@@ -95,18 +95,18 @@ Software architects understand that architecture documentation has points of con
 * Test documentation
 * Operations documentation
 
-[[LZ-1-4]]
-==== LZ 1-4: Know typical notation and representation methods for architectural documentation
+[[LG-1-4]]
+==== LG 1-4: Know typical notation and representation methods for architectural documentation
 
 Software architects are familiar with various methods of notation and representation of architectural information, for example:
 
 * Modeling methods, such as UML, BPMN, ER diagrams, EPC (Event-driven process chain)
 * Textual explanations of decisions
 
-Sie wissen, dass formalere Notationen wie UML für Architekturdokumentation hilfreich sein können, aber nicht zwingend erforderlich sind.
+They know that more formal notations such as UML can be helpful for architecture documentation, but are not mandatory.
 
-[[LZ-1-5]]
-==== LZ 1-5: Know variants of development processes and their influence on architecture documentation
+[[LG-1-5]]
+==== LG 1-5: Know variants of development processes and their influence on architecture documentation
 
 Software architects know that
 
