Terms for tool chapter in English

--- a/docs/04-tools/01-duration-terms.adoc
+++ b/docs/04-tools/01-duration-terms.adoc
@@ -20,6 +20,8 @@ Analoge und digitale Werkzeuge, Modellierungstools, Toolkette.
 
 === Terms and concepts
 
+Analog and digital tools, modelling tools, tool chain.
+
 // end::EN[]
 
 // tag::REMARK[]
